Fixed layout issues. Thanks Felipe

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -181,127 +181,6 @@ tr:hover .deleteBtn {
 }
 
 #speedGroup {
-<<<<<<< HEAD
-		display: none;
-			position: absolute;
-			top: 5%;
-			right: 25%;
-			z-index: 1;
-		}
-
-		#speedLabel {
-			position: absolute;
-			font-family: Ubuntu, sans-serif;
-			color: darkgray;
-			font-size: 2.5em;
-			font-weight: bold;
-			cursor: default;
-		}
-
-		#speedText {
-			font-family: Ubuntu, sans-serif;
-			font-size: 2em;
-			font-weight: bold;
-			color: darkgray;
-			margin-top: 7px;
-			cursor: pointer;
-			transition: color .3s ease-in-out;
-		}
-
-		#speedText:hover {
-			color: black;
-		}
-
-		#speedLabelAndMenuGroup {
-			position: absolute;
-			left: 140px;
-		}
-
-		.speedMenuItem {
-			font-family: Ubuntu, sans-serif;
-			font-size: 2em;
-			font-weight: bold;
-			color: darkgray;
-			cursor: pointer;
-			transition: color .3s ease-in-out;
-		}
-
-		.speedMenuItem:hover {
-			color: black;
-		}
-
-		#playButton {
-			position: absolute;
-			top: 40%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			transform: scale(5);
-
-			color: rgba(169, 169, 169, 0.95);
-			text-shadow: 0 0 1px grey;
-			transition: text-shadow .3s ease-in-out;
-			cursor: pointer;
-		}
-
-		#speedGroup:hover {
-			text-shadow: none;
-		}
-
-		#imageContainer {
-			height: 60%;
-		}
-
-		#handImage {
-			margin: 0 auto;
-			height: 25vh;
-			max-width: 60vh;
-			margin-top: 3%;
-			background-size: contain;
-			background-repeat: no-repeat;
-			background-position: center;
-			opacity: 1;
-
-			transition: opacity .05s ease-in-out;
-		}
-
-
-
-		#privacyPolicyButton {
-			color: grey;
-			font-family: Ubuntu, sans-serif;
-			position: absolute;
-			bottom: 10px;
-			right: 10px;
-			cursor: pointer;
-			text-decoration: none;
-		}
-
-		.hand-popup {
-		    position: absolute;
-		    right: 0;
-		    bottom: 0;
-		    background-color: rgba(255, 255, 255, 0.22);
-		    width: 310px;
-		    height: 35px;
-		    border-top-left-radius: 4px;
-		    animation-duration: 1s;
-		    animation-fill-mode: forwards;
-		    overflow: hidden;
-		    animation-name: popup_open;
-		    border-width: 1px 1px 0px 1px;
-		    border-style: solid;
-		    border-color: #e6e6e6;
-		}
-
-		.esconde {
-			visibility: visible;
-		}
-
-		.mostra {
-			
-			visibility: hidden;
-		}
-=======
 	display: none;
 		position: absolute;
 		top: 5%;
@@ -420,4 +299,3 @@ tr:hover .deleteBtn {
 	.mostra {
 		visibility: visible;
 	}
->>>>>>> 607cf31ab42fee5219d64e4ee79182dd79fdcba1
